--- a/translations/kangyur/translations/090-028_toh584,940-the_dharani_for_retaining_the_noble_avatamsaka.xml
+++ b/translations/kangyur/translations/090-028_toh584,940-the_dharani_for_retaining_the_noble_avatamsaka.xml
@@ -18,7 +18,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-090-028-73">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -135,6 +135,9 @@
                 <change who="#sameer" when="2024-07-09T08:52:15.234Z" type="text-version" status="1.0.0" xml:id="UT22084-090-028-77">
                     <desc>First published version.</desc>
                 </change>
+                <change who="#konchog" when="2024-07-09T17:12:36.927Z" type="text-version" status="1.0.1" xml:id="UT22084-090-028-78">
+                    <desc>Small proofing fixes throughout all sections.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -146,7 +149,7 @@
             <div type="summary">
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-090-028-36"/>
-                <p tid="2">The text presents a single dhāraṇī to enable the retention of the Avataṃsakasūtra.</p>
+                <p tid="2">This text presents a single dhāraṇī to enable the retention of the Avataṃsakasūtra.</p>
             </div>
             <div type="acknowledgment">
                 <head type="acknowledgment" tid="3">Acknowledgements</head>
@@ -160,17 +163,16 @@
                 <head type="introduction" tid="7">Introduction</head>
                 <div type="section" xml:id="UT22084-090-028-introduction-1">
                     <milestone unit="chunk" xml:id="UT22084-090-028-40"/>
-                    <p tid="9">The text presents a single <foreign xml:lang="Sa-Ltn" type="term">dhāraṇī</foreign>
-                        <note place="end" xml:id="UT22084-090-028-41"> Of the four types of dhāraṇīs described by the
+                    <p tid="9">This text presents a single dhāraṇī<note place="end" xml:id="UT22084-090-028-41"> Of the four types of dhāraṇīs described by the
                             fourth-century scholar-yogi Asaṅga—Dharma dhāraṇīs (<foreign xml:lang="Sa-Ltn" type="term">dharmadhāraṇī</foreign>; <foreign xml:lang="Bo-Ltn" type="term">chos kyi gzungs</foreign>), meaning
                             dhāraṇīs (<foreign xml:lang="Sa-Ltn" type="term">arthadhāraṇī</foreign>; <foreign xml:lang="Bo-Ltn" type="term">don gyi gzungs</foreign>), mantra dhāraṇīs (<foreign xml:lang="Sa-Ltn" type="term">mantradhāraṇī</foreign>; <foreign xml:lang="Bo-Ltn" type="term">gsang sngags kyi gzungs</foreign>), and bodhisattva forbearance dhāraṇīs (<foreign xml:lang="Sa-Ltn" type="term">bodhisattva­kṣāntilābhāya­dhāraṇī</foreign>; <foreign xml:lang="Bo-Ltn" type="term">byang chub sems dpa’ bzod pa ’thob par byed pa’i gzungs</foreign>)—this text falls into the category of
                                 <foreign xml:lang="Sa-Ltn" type="term">dharmadhāraṇīs</foreign>, which enable one to retain knowledge of words, that is, Dharma teachings, that have been heard. Cf. <distinct>Grounds of
-                                Bodhisattvas</distinct> (<foreign xml:lang="Sa-Ltn" type="term">bodhisattva­bhūmi</foreign>; <foreign xml:lang="Bo-Ltn" type="term">byang chub sems dpa’i sa</foreign>; <ref target="https://read.84000.co/translation/toh4037.html" rend="pending">Toh 4037</ref>, fol. 144.a). A discussion of various classifications of dhāraṇīs is given in Pagel 2007.</note> to
+                                Bodhisattvas</distinct> (<foreign xml:lang="Sa-Ltn" type="term">Bodhisattva­bhūmi</foreign>; <foreign xml:lang="Bo-Ltn" type="term">byang chub sems dpa’i sa</foreign>; <ref target="https://read.84000.co/translation/toh4037.html" rend="pending">Toh 4037</ref>, folio 144.a). A discussion of various classifications of dhāraṇīs is given in Pagel 2007.</note> to
                         enable the retention of the Avataṃsakasūtra<note place="end" xml:id="UT22084-090-028-75">See the 84000 Knowledge Base article, “<ref target="https://read.84000.co/knowledgebase/ornaments-buddhas.html">Ornaments of the Buddhas</ref>.”</note>, with no additional explanation. The text appears similar in nature to the sort of dhāraṇī presented to enable retention in <title xml:lang="en">The
                             Dhāraṇī for the Retention of the Perfection of Wisdom Sūtra in One Hundred Thousand Lines</title> (<ref target="https://read.84000.co/translation/toh583.html">Toh 583</ref>).
                         No Sanskrit title is provided for this text, and its title is given on the basis of the Tibetan alone.</p>
                     <milestone unit="chunk" xml:id="UT22084-090-028-42"/>
-                    <p tid="10">This translation of the text into English relied primarily on the Degé recension while referring to variant readings in other recensions as noted in the Comparative Edition (<title xml:lang="Bo-Ltn">dpe bsdur ma</title>) and validated in the source texts—notably Narthang (N).<note place="end" xml:id="UT22084-090-028-61">
+                    <p tid="10">This translation of the text into English relied primarily on the Degé recension while referring to variant readings in other recensions as noted in the Comparative Edition (<title xml:lang="Bo-Ltn">dpe bsdur ma</title>) and validated in the source texts—notably Narthang.<note place="end" xml:id="UT22084-090-028-61">
                             <p key="toh940">This text, Toh 940, and all those contained in this same volume (<foreign xml:lang="Bo-Ltn">gzungs ’dus, e</foreign>), are listed as being located in volume 100 of the Degé
                                 Kangyur by the Buddhist Digital Resource Center (BDRC). However, several other Kangyur databases—including the eKangyur that supplies the digital input version displayed by the 84000
                                 Reading Room—list this work as being located in volume 101. This discrepancy is partly due to the fact that the two volumes of the <foreign xml:lang="Bo-Ltn">gzungs ’dus</foreign> section
@@ -181,7 +183,7 @@
                                 this translation.</p>
                             <!--THE FOLLOWING ONLY NEEDED FOR TEXTS WITH MULTIPLE TOH VERSIONS OTHERWISE OMIT AND REMOVE THE <p> ELEMENT-->
                                 <p key="toh584">Note that there is a discrepancy among various databases for cataloging the Toh 940 version of this text within vol. 100 or 101 of the Degé Kangyur. See Toh 940, <ptr target="toh940.html#UT22084-090-028-61"/>, for details.</p>
-                        </note> No previous translation of this text into a language outside the Tibetan sphere of influence is known. Meisezahl (1957) provides a diplomatic edition of the <foreign xml:lang="Sa-Ltn" type="term">dhāraṇī</foreign> found in the Linden Museum Tibetan collection. </p>
+                        </note> No previous translation of this text into a language outside the Tibetan sphere of influence is known. Meisezahl (1957) provides a diplomatic edition of the dhāraṇī found in the Linden Museum Tibetan collection. </p>
                 </div>
             </div>
         </front>
@@ -205,7 +207,7 @@
                     <milestone unit="chunk" xml:id="UT22084-090-028-48"/>
                     <p tid="18">By taking up this dhāraṇī, one will retain the noble Avataṃsaka. One will be like someone who has written it and recited it.</p>
                     <milestone unit="chunk" xml:id="UT22084-090-028-49"/>
-                    <trailer tid="19">This completes <title xml:lang="en">The Dhāraṇī for Retaining the Noble Avataṃsaka</title>.</trailer>
+                    <trailer tid="19">This completes “<title xml:lang="en">The Dhāraṇī for Retaining the Noble Avataṃsaka</title>.”</trailer>
                 </div>
             </div>
         </body>
@@ -229,7 +231,7 @@
                     <head type="section" tid="24">Other Sources</head>
                     <bibl xml:id="UT22084-090-028-53">Meisezahl, Richard O. “Die tibetischen Handschriften und Drucke des Linden-Museums in Stuttgart.” <title xml:lang="de">Tribus</title> 7 (1957): 1–166, 102 (item 71
                         566, Nr. 5).</bibl>
-                    <bibl xml:id="UT22084-090-028-54">Pagel, Ulrich. <title xml:lang="en">Mapping the Path: Vajrapadas in Mahāyāna Literature</title>. Tokyo: The International Institute for Buddhist Studies (2007).
+                    <bibl xml:id="UT22084-090-028-54">Pagel, Ulrich. <title xml:lang="en">Mapping the Path: Vajrapadas in Mahāyāna Literature</title>. Tokyo: The International Institute for Buddhist Studies, 2007.
                     </bibl>
                 </div>
             </div>
