--- a/translations/kangyur/placeholders/090-004_toh560-the_essence_of_the_peahen_queen_of_spells.xml
+++ b/translations/kangyur/placeholders/090-004_toh560-the_essence_of_the_peahen_queen_of_spells.xml
@@ -17,11 +17,11 @@
                 <sponsor xml:id="UT22084-090-004-12">DJKR, Herlintje, Hadi Widjaja, Lina Herlintje, Ocean Widjaja, Asia Widjaja, Star Widjaja and Gold Widjaja.</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-090-004"/>
                 <date/>
             </publicationStmt>
@@ -64,6 +64,12 @@
                 </change>
                 <change who="#cabie-sim" when="2024-01-16T03:39:30.913Z" type="text-version" status="0.0.8" xml:id="UT22084-090-004-14">
                     <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-08T08:31:43.634Z" type="translation-status" status="2.h" xml:id="UT22084-090-004-15">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-08T08:31:43.634Z" type="text-version" status="0.0.9" xml:id="UT22084-090-004-16">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
