--- a/translations/kangyur/translations/072-033_toh333-the_sutra_of_vasistha.xml
+++ b/translations/kangyur/translations/072-033_toh333-the_sutra_of_vasistha.xml
@@ -34,7 +34,7 @@
                                         Norbu</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.1.8 <date>2024</date>
+                <edition>v 1.1.9 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -227,6 +227,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-05-29T12:56:42.255Z" type="text-version" status="1.1.8" xml:id="UT22084-072-033-364">
                     <desc>updated pending links.</desc>
+                </change>
+                <change who="#celso" when="2024-08-08T16:16:27.372Z" type="text-version" status="1.1.9" xml:id="UT22084-072-033-365">
+                    <desc>small edit</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -711,9 +714,7 @@
                                                   dang / sar yu dang / gnas ldan dang / chen po zhes
                                                   bya ba</foreign>, i.e., the Ganges, the Yamunā,
                                                   the Sarabhū, the Ajiravatī, and the Mahī. See
-                                                  <title xml:lang="en">
-                                <ref target="https://read.84000.co/translation/toh1-6.html?id=&amp;part=UT22084-001-006-chapter-8">The Chapter on Medicines</ref>
-                            </title> (Toh 1–6),
+                                                  <title xml:lang="en">The Chapter on Medicines</title> (Toh 1–6),
                                                   <ref target="https://read.84000.co/translation/toh1-6.html#UT22084-001-006-2948">8.227</ref>. Searching the Buddhist Digital
                                                   Resource Center’s database of e-texts reveals that
                                                   where later Tibetan texts refer to <title xml:lang="en">The Sūtra of Vasiṣṭha</title>, the
