--- a/translations/kangyur/placeholders/034-008_toh20,491-the_twentyfive_entrances_to_the_perfection_of_wisdom.xml
+++ b/translations/kangyur/placeholders/034-008_toh20,491-the_twentyfive_entrances_to_the_perfection_of_wisdom.xml
@@ -8,20 +8,21 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">Pañcaviṃśatikāprajñāpāramitāmukha</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sher phyin sgo nyi shu rtsa lnga pa/</title>
                 <title type="otherTitle" xml:lang="en">The Twenty-Five Entrances to the Perfection of Wisdom</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Āryapañcaviṃśatikāprajñā­pāramitāmukha­nāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Pañcaviṃśatikāprajñā­pāramitāmukhasūtra</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryapañcaviṃśatikā­prajñāpāramitāmukha­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Pañcaviṃśatikāprajñā­pāramitāmukhasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryapañcaviṃśatikāprajñā­pāramitāmukha­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa'i sgo nyi shu rtsa lnga pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa'i sgo nyi shu rtsa lnga pa zhes bya ba theg pa chen po'i mdo/</title>
                 <author role="translatorMain" xml:id="UT22084-034-008-4">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-034-008-5">Lowell Cook</author>
+                <editor role="projectEditor" xml:id="UT22084-034-008-21">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-034-008"/>
             </publicationStmt>
             <sourceDesc>
@@ -77,6 +78,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-09T13:22:04.605Z" type="text-version" status="0.0.3" xml:id="UT22084-034-008-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-09T13:22:52.819Z" type="text-version" status="0.0.4" xml:id="UT22084-034-008-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T12:07:35.961Z" type="translation-status" status="2.f" xml:id="UT22084-034-008-23">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T12:07:35.961Z" type="text-version" status="0.0.5" xml:id="UT22084-034-008-24">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
