--- a/translations/kangyur/placeholders/090-022_toh578,934-incantation_of_the_perfection_of_wisdom_in_eight_thousand_lines.xml
+++ b/translations/kangyur/placeholders/090-022_toh578,934-incantation_of_the_perfection_of_wisdom_in_eight_thousand_lines.xml
@@ -16,11 +16,11 @@
                 <author role="translatorEng" xml:id="UT22084-090-022-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-090-022"/>
                 <date/>
             </publicationStmt>
@@ -69,6 +69,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:44:46.805Z" type="text-version" status="0.0.6" xml:id="UT22084-090-022-12">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T13:20:31.443Z" type="translation-status" status="2.h" xml:id="UT22084-090-022-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T13:20:31.443Z" type="text-version" status="0.0.7" xml:id="UT22084-090-022-14">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
