--- a/translations/kangyur/placeholders/096-010_toh761-the_incantation_of_lohatunda.xml
+++ b/translations/kangyur/placeholders/096-010_toh761-the_incantation_of_lohatunda.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" xml:id="UT22084-096-010-2">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-096-010"/>
                 <date/>
             </publicationStmt>
@@ -50,6 +50,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2023-12-22T10:18:21.225Z" type="text-version" status="0.0.4" xml:id="UT22084-096-010-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-02T09:48:51.419Z" type="translation-status" status="2.g" xml:id="UT22084-096-010-9">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-02T09:48:51.419Z" type="text-version" status="0.0.5" xml:id="UT22084-096-010-10">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
