--- a/translations/kangyur/placeholders/088-011_toh517,871-the_incantation_the_stainless.xml
+++ b/translations/kangyur/placeholders/088-011_toh517,871-the_incantation_the_stainless.xml
@@ -15,11 +15,11 @@
                 <consultant role="projectManager" xml:id="UT22084-088-011-4">Péter-Dániel Szántó</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-088-011"/>
                 <date/>
             </publicationStmt>
@@ -74,6 +74,12 @@
                 </change>
                 <change who="#sameer" when="2024-03-28T08:26:43.495Z" type="text-version" status="0.0.8" xml:id="UT22084-088-011-14">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-19T14:07:44.6Z" type="translation-status" status="2.h" xml:id="UT22084-088-011-15">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-19T14:07:44.6Z" type="text-version" status="0.0.9" xml:id="UT22084-088-011-16">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
