--- a/translations/kangyur/placeholders/083-019_toh471,2006-the_practice_of_the_legend.xml
+++ b/translations/kangyur/placeholders/083-019_toh471,2006-the_practice_of_the_legend.xml
@@ -5,20 +5,20 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Practice of the Legend</title>
-                <!--<title xml:lang="en" type="mainTitle">A Ritual Manual in Abbreviated Metre</title> title from Toh 2006-->
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gtam rgyud kyi rtog pa/</title>
                 <author role="translatorMain" xml:id="UT22084-083-019-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-083-019-2">Bruno Galasek-Hul</author>
                 <editor role="projectEditor" xml:id="UT22084-083-019-14">Ryan Damron</editor>
                 <editor role="copyEditor" xml:id="UT22084-083-019-23">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-083-019-33">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-083-019"/>
             </publicationStmt>
             <sourceDesc>
@@ -96,6 +96,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-30T11:32:41.842Z" type="text-version" status="0.0.12" xml:id="UT22084-083-019-28">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T11:33:18.18Z" type="text-version" status="0.0.13" xml:id="UT22084-083-019-34">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-19T14:32:08.718Z" type="translation-status" status="2.b" xml:id="UT22084-083-019-35">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-19T14:32:08.718Z" type="text-version" status="0.0.14" xml:id="UT22084-083-019-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
