--- a/translations/kangyur/placeholders/041-002_toh57-the_teaching_to_nanda_on_entering_the_womb.xml
+++ b/translations/kangyur/placeholders/041-002_toh57-the_teaching_to_nanda_on_entering_the_womb.xml
@@ -13,15 +13,16 @@
                 <author role="translatorMain" xml:id="UT22084-041-002-1">Robert Kritzer</author>
                 <author role="translatorEng" xml:id="UT22084-041-002-2">Robert Kritzer</author>
                 <editor role="projectEditor" xml:id="UT22084-041-002-20">Nathaniel Rich</editor>
+                <editor role="copyEditor" xml:id="UT22084-041-002-29">Konchog Norbu</editor>
                 <sponsor xml:id="UT22084-041-002-3">Make Wang Xiao Juan</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.15 <date>2024</date>
+                <edition>v 0.0.17 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-041-002"/>
                 <date/>
             </publicationStmt>
@@ -93,6 +94,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-03T14:34:38.734Z" type="text-version" status="0.0.15" xml:id="UT22084-041-002-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-03T14:35:18.653Z" type="text-version" status="0.0.16" xml:id="UT22084-041-002-30">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-19T14:44:17.728Z" type="translation-status" status="2.d" xml:id="UT22084-041-002-31">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-19T14:44:17.728Z" type="text-version" status="0.0.17" xml:id="UT22084-041-002-32">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
