--- a/translations/kangyur/placeholders/057-002_toh143,611,918-the_two_stanza_incantation.xml
+++ b/translations/kangyur/placeholders/057-002_toh143,611,918-the_two_stanza_incantation.xml
@@ -17,11 +17,11 @@
                 <editor role="projectEditor" xml:id="UT22084-057-002-40">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.15 <date>2024</date>
+                <edition>v 0.0.16 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-057-002"/>
                 <date/>
             </publicationStmt>
@@ -120,6 +120,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-16T14:03:25.262Z" type="text-version" status="0.0.15" xml:id="UT22084-057-002-44">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T07:10:29.765Z" type="translation-status" status="2.a" xml:id="UT22084-057-002-45">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T07:10:29.765Z" type="text-version" status="0.0.16" xml:id="UT22084-057-002-46">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
