--- a/translations/kangyur/placeholders/090-033_toh589,945-the_incantation_of_the_descent_to_lanka_sutra.xml
+++ b/translations/kangyur/placeholders/090-033_toh589,945-the_incantation_of_the_descent_to_lanka_sutra.xml
@@ -17,11 +17,11 @@
                 <author role="translatorEng" xml:id="UT22084-090-033-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-090-033"/>
                 <date/>
             </publicationStmt>
@@ -70,6 +70,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:52:49.599Z" type="text-version" status="0.0.6" xml:id="UT22084-090-033-12">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T07:36:02.771Z" type="translation-status" status="2.g" xml:id="UT22084-090-033-13">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T07:36:02.771Z" type="text-version" status="0.0.7" xml:id="UT22084-090-033-14">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
