--- a/translations/kangyur/placeholders/080-002_toh418-the_tantra_of_hevajra_he_who_affords_protection_through_nets_of_dakinis.xml
+++ b/translations/kangyur/placeholders/080-002_toh418-the_tantra_of_hevajra_he_who_affords_protection_through_nets_of_dakinis.xml
@@ -11,22 +11,24 @@
                 <title type="longTitle" xml:lang="Bo-Ltn">kye'i rdo rje zhes bya ba rgyud kyi rgyal po/</title>
                 <title type="otherTitle" xml:lang="en">The Sovereign Tantra of Hevajra, He Who Affords Protection Through Nets of Ḍākinīs</title>
                 <title type="otherTitle" xml:lang="en">The great sovereign tantra known as "The Part on Illusion," from the two-part "Sovereign Tantra of Hevajra Himself, He Who Affords Protection Through Nets of Ḍākinīs," extracted from the thirty-two parts.</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn" rend="reconstruction">hevajra­ḍākinī­jāla­saṃvara­tantra­rāja</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Dvikalparāja (2)</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn" rend="reconstruction">hevajra­ḍākinī­jāla­saṃvara­tantra­rāja</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Mahā­tantra­rāja­māyā­kalpa dvitīyaḥ</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">kye'i rdo rje mkha' 'gro ma dra ba'i sdom pa'i rgyud kyi rgyal po/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rgyud kyi rgyal po chen po sgyu ma'i brtag pa zhes bya ba brtag pa sum cu rtsa gnyis las phyung ba brtag pa gnyis kyi bdag nyid kye'i rdo rje mkha' 'gro ma dra ba'i sdom pa'i rgyud kyi rgyal po/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">brtag pa gnyis/___brtag gnyis___(2)</title>
-                <author role="translatorMain" xml:id="UT22084-080-002-1"/>
+                <author role="translatorMain" xml:id="UT22084-080-002-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-080-002-2">Wiesiek Mical</author>
+                <editor role="projectEditor" xml:id="UT22084-080-002-15">Ryan Damron</editor>
+                <sponsor xml:id="UT22084-080-002-11">Aron Csondes</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.46 <date>2023</date>
+                <edition>v 0.0.50 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-080-002"/>
                 <date/>
             </publicationStmt>
@@ -41,9 +43,7 @@
                     <idno source-id="O1JC114941JC12120" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="title" date-time="2022-03-07T12:35:20.787Z" user="john">The twelve chapters of this text together with the eleven chapters of the preceding one, Toh 417, together make up the root tantra known as the Two-Part Hevajra Tantra (Skt. dvikalparāja; Tib. brtag pa gnyis), traditionally considered to be an abridgement of a lost larger work in five hundred thousand stanzas, comprising thirty-two parts.</note>
-            </notesStmt>
+            <notesStmt/>
             <revisionDesc>
                 <change who="#john" when="2019-03-09T12:21:50.974Z" type="translation-status" status="3" xml:id="UT22084-080-002-3">
                     <desc>3</desc>
@@ -65,6 +65,21 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.46" xml:id="UT22084-080-002-9">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-09-24T05:49:04.336Z" type="text-version" status="0.0.47" xml:id="UT22084-080-002-10">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-09-24T05:49:28.832Z" type="text-version" status="0.0.48" xml:id="UT22084-080-002-12">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T08:15:42.234Z" type="text-version" status="0.0.49" xml:id="UT22084-080-002-16">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T08:21:34.374Z" type="translation-status" status="2.g" xml:id="UT22084-080-002-17">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T08:21:34.374Z" type="text-version" status="0.0.50" xml:id="UT22084-080-002-18">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
