--- a/translations/kangyur/placeholders/091-049_toh652,863-the_incantation_of_the_bodhisattva_supreme_conqueror.xml
+++ b/translations/kangyur/placeholders/091-049_toh652,863-the_incantation_of_the_bodhisattva_supreme_conqueror.xml
@@ -12,11 +12,11 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rgyal ba'i bla ma'i gzungs/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-049"/>
             </publicationStmt>
             <sourceDesc>
@@ -47,6 +47,12 @@
                 </change>
                 <change who="#sameer" when="2024-04-02T06:44:53.712Z" type="text-version" status="0.0.2" xml:id="UT22084-091-049-2">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T12:08:09.032Z" type="translation-status" status="3" xml:id="UT22084-091-049-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T12:08:09.032Z" type="text-version" status="0.0.3" xml:id="UT22084-091-049-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
