--- a/translations/kangyur/placeholders/093-003_toh688,902-incantation_of_the_ten_grounds.xml
+++ b/translations/kangyur/placeholders/093-003_toh688,902-incantation_of_the_ten_grounds.xml
@@ -9,11 +9,11 @@
                 <title type="mainTitle" xml:lang="en">Dhāraṇī of the Ten Grounds</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-093-003"/>
             </publicationStmt>
             <sourceDesc>
@@ -44,6 +44,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:12:48.233Z" type="text-version" status="0.0.2" xml:id="UT22084-093-003-2">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T12:09:31.452Z" type="translation-status" status="3" xml:id="UT22084-093-003-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T12:09:31.452Z" type="text-version" status="0.0.3" xml:id="UT22084-093-003-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
