--- a/translations/kangyur/placeholders/093-030_toh715,1046-the_incantation_training_in_the_thousand_verses.xml
+++ b/translations/kangyur/placeholders/093-030_toh715,1046-the_incantation_training_in_the_thousand_verses.xml
@@ -9,11 +9,11 @@
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, Training in the Thousand Verses</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-093-030"/>
             </publicationStmt>
             <sourceDesc>
@@ -44,6 +44,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-05T17:52:38.636Z" type="text-version" status="0.0.2" xml:id="UT22084-093-030-2">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T12:14:47.161Z" type="translation-status" status="3" xml:id="UT22084-093-030-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T12:14:47.161Z" type="text-version" status="0.0.3" xml:id="UT22084-093-030-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
